# LuaSimple

./: .gitignore  LICENSE  README.md  error.txt
.github/workflows/: codeql.yml
backup source/: CMakeLists.txt
backup source/LuaSimple/: LuaInstance.cpp  LuaInstance.hpp  LuaTypeClasses.hpp  PopVariable.cpp  SetGlobal.hpp
source/: CFunctionCalls.lua  CMakeLists.txt  TwoInstances.lua  UsingUserdata.lua  funny file.lua  main.cpp
source/LuaSimple/: CMakeLists.txt  GetGlobal.cpp  GetGlobal.hpp  GetVariable.cpp  GetVariable.hpp  LuaFunction.hpp  LuaInstance.cpp  LuaInstance.hpp  LuaTypeClasses.hpp  PopVariable.cpp  PopVariable.hpp  PushVariable.cpp  PushVariable.hpp  SetGlobal.cpp  SetGlobal.hpp  VariableMaker.hpp
